Fix inf/ overflowing issue by doing normalization

--- a/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
+++ b/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
@@ -193,19 +193,19 @@
        "3   4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
        "4   5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
        "\n",
-       "  LandContour Utilities    ...     PoolArea PoolQC Fence MiscFeature MiscVal  \\\n",
-       "0         Lvl    AllPub    ...            0    NaN   NaN         NaN       0   \n",
-       "1         Lvl    AllPub    ...            0    NaN   NaN         NaN       0   \n",
-       "2         Lvl    AllPub    ...            0    NaN   NaN         NaN       0   \n",
-       "3         Lvl    AllPub    ...            0    NaN   NaN         NaN       0   \n",
-       "4         Lvl    AllPub    ...            0    NaN   NaN         NaN       0   \n",
+       "  LandContour Utilities  ... PoolArea PoolQC Fence MiscFeature MiscVal MoSold  \\\n",
+       "0         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
+       "1         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      5   \n",
+       "2         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      9   \n",
+       "3         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
+       "4         Lvl    AllPub  ...        0    NaN   NaN         NaN       0     12   \n",
        "\n",
-       "  MoSold YrSold  SaleType  SaleCondition  SalePrice  \n",
-       "0      2   2008        WD         Normal     208500  \n",
-       "1      5   2007        WD         Normal     181500  \n",
-       "2      9   2008        WD         Normal     223500  \n",
-       "3      2   2006        WD        Abnorml     140000  \n",
-       "4     12   2008        WD         Normal     250000  \n",
+       "  YrSold  SaleType  SaleCondition  SalePrice  \n",
+       "0   2008        WD         Normal     208500  \n",
+       "1   2007        WD         Normal     181500  \n",
+       "2   2008        WD         Normal     223500  \n",
+       "3   2006        WD        Abnorml     140000  \n",
+       "4   2008        WD         Normal     250000  \n",
        "\n",
        "[5 rows x 81 columns]"
       ]
@@ -326,10 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "NA_columns = DF.columns[DF.isna().any()].tolist()\n",
     "train_feature = DF.drop(NA_columns, axis=1)\n",
     "train_label = DF['SalePrice'].copy()"
    ]
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,18 +507,237 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 04. Normalization"
+    "# 測試\n",
+    "train_feature_num = train_feature['LotArea'].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>OverallQual</th>\n",
+       "      <th>OverallCond</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
+       "      <th>BsmtFinSF1</th>\n",
+       "      <th>BsmtFinSF2</th>\n",
+       "      <th>BsmtUnfSF</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WoodDeckSF</th>\n",
+       "      <th>OpenPorchSF</th>\n",
+       "      <th>EnclosedPorch</th>\n",
+       "      <th>3SsnPorch</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.730865</td>\n",
+       "      <td>0.073375</td>\n",
+       "      <td>-0.207142</td>\n",
+       "      <td>0.651479</td>\n",
+       "      <td>-0.517200</td>\n",
+       "      <td>1.050994</td>\n",
+       "      <td>0.878668</td>\n",
+       "      <td>0.575425</td>\n",
+       "      <td>-0.288653</td>\n",
+       "      <td>-0.944591</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.752176</td>\n",
+       "      <td>0.216503</td>\n",
+       "      <td>-0.359325</td>\n",
+       "      <td>-0.116339</td>\n",
+       "      <td>-0.270208</td>\n",
+       "      <td>-0.068692</td>\n",
+       "      <td>-0.087688</td>\n",
+       "      <td>-1.599111</td>\n",
+       "      <td>0.138777</td>\n",
+       "      <td>0.347273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.728492</td>\n",
+       "      <td>-0.872563</td>\n",
+       "      <td>-0.091886</td>\n",
+       "      <td>-0.071836</td>\n",
+       "      <td>2.179628</td>\n",
+       "      <td>0.156734</td>\n",
+       "      <td>-0.429577</td>\n",
+       "      <td>1.171992</td>\n",
+       "      <td>-0.288653</td>\n",
+       "      <td>-0.641228</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.626195</td>\n",
+       "      <td>-0.704483</td>\n",
+       "      <td>-0.359325</td>\n",
+       "      <td>-0.116339</td>\n",
+       "      <td>-0.270208</td>\n",
+       "      <td>-0.068692</td>\n",
+       "      <td>-0.087688</td>\n",
+       "      <td>-0.489110</td>\n",
+       "      <td>-0.614439</td>\n",
+       "      <td>0.007288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.726120</td>\n",
+       "      <td>0.073375</td>\n",
+       "      <td>0.073480</td>\n",
+       "      <td>0.651479</td>\n",
+       "      <td>-0.517200</td>\n",
+       "      <td>0.984752</td>\n",
+       "      <td>0.830215</td>\n",
+       "      <td>0.092907</td>\n",
+       "      <td>-0.288653</td>\n",
+       "      <td>-0.301643</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.752176</td>\n",
+       "      <td>-0.070361</td>\n",
+       "      <td>-0.359325</td>\n",
+       "      <td>-0.116339</td>\n",
+       "      <td>-0.270208</td>\n",
+       "      <td>-0.068692</td>\n",
+       "      <td>-0.087688</td>\n",
+       "      <td>0.990891</td>\n",
+       "      <td>0.138777</td>\n",
+       "      <td>0.536154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-1.723747</td>\n",
+       "      <td>0.309859</td>\n",
+       "      <td>-0.096897</td>\n",
+       "      <td>0.651479</td>\n",
+       "      <td>-0.517200</td>\n",
+       "      <td>-1.863632</td>\n",
+       "      <td>-0.720298</td>\n",
+       "      <td>-0.499274</td>\n",
+       "      <td>-0.288653</td>\n",
+       "      <td>-0.061670</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.752176</td>\n",
+       "      <td>-0.176048</td>\n",
+       "      <td>4.092524</td>\n",
+       "      <td>-0.116339</td>\n",
+       "      <td>-0.270208</td>\n",
+       "      <td>-0.068692</td>\n",
+       "      <td>-0.087688</td>\n",
+       "      <td>-1.599111</td>\n",
+       "      <td>-1.367655</td>\n",
+       "      <td>-0.515281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.721374</td>\n",
+       "      <td>0.073375</td>\n",
+       "      <td>0.375148</td>\n",
+       "      <td>1.374795</td>\n",
+       "      <td>-0.517200</td>\n",
+       "      <td>0.951632</td>\n",
+       "      <td>0.733308</td>\n",
+       "      <td>0.463568</td>\n",
+       "      <td>-0.288653</td>\n",
+       "      <td>-0.174865</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.780197</td>\n",
+       "      <td>0.563760</td>\n",
+       "      <td>-0.359325</td>\n",
+       "      <td>-0.116339</td>\n",
+       "      <td>-0.270208</td>\n",
+       "      <td>-0.068692</td>\n",
+       "      <td>-0.087688</td>\n",
+       "      <td>2.100892</td>\n",
+       "      <td>0.138777</td>\n",
+       "      <td>0.869843</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Id  MSSubClass   LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
+       "0 -1.730865    0.073375 -0.207142     0.651479    -0.517200   1.050994   \n",
+       "1 -1.728492   -0.872563 -0.091886    -0.071836     2.179628   0.156734   \n",
+       "2 -1.726120    0.073375  0.073480     0.651479    -0.517200   0.984752   \n",
+       "3 -1.723747    0.309859 -0.096897     0.651479    -0.517200  -1.863632   \n",
+       "4 -1.721374    0.073375  0.375148     1.374795    -0.517200   0.951632   \n",
+       "\n",
+       "   YearRemodAdd  BsmtFinSF1  BsmtFinSF2  BsmtUnfSF  ...  WoodDeckSF  \\\n",
+       "0      0.878668    0.575425   -0.288653  -0.944591  ...   -0.752176   \n",
+       "1     -0.429577    1.171992   -0.288653  -0.641228  ...    1.626195   \n",
+       "2      0.830215    0.092907   -0.288653  -0.301643  ...   -0.752176   \n",
+       "3     -0.720298   -0.499274   -0.288653  -0.061670  ...   -0.752176   \n",
+       "4      0.733308    0.463568   -0.288653  -0.174865  ...    0.780197   \n",
+       "\n",
+       "   OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea   MiscVal  \\\n",
+       "0     0.216503      -0.359325  -0.116339    -0.270208 -0.068692 -0.087688   \n",
+       "1    -0.704483      -0.359325  -0.116339    -0.270208 -0.068692 -0.087688   \n",
+       "2    -0.070361      -0.359325  -0.116339    -0.270208 -0.068692 -0.087688   \n",
+       "3    -0.176048       4.092524  -0.116339    -0.270208 -0.068692 -0.087688   \n",
+       "4     0.563760      -0.359325  -0.116339    -0.270208 -0.068692 -0.087688   \n",
+       "\n",
+       "     MoSold    YrSold  SalePrice  \n",
+       "0 -1.599111  0.138777   0.347273  \n",
+       "1 -0.489110 -0.614439   0.007288  \n",
+       "2  0.990891  0.138777   0.536154  \n",
+       "3 -1.599111 -1.367655  -0.515281  \n",
+       "4  2.100892  0.138777   0.869843  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 避免overflow/ inf\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "column_names = list(train_feature_num)\n",
+    "train_feature_num = scaler.fit_transform(train_feature_num)\n",
+    "# 從 ndarray轉回dataframe\n",
+    "train_feature_num = pd.DataFrame(train_feature_num, columns=column_names)\n",
+    "train_feature_num.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,23 +750,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = np.zeros(len(train_feature_num.columns))\n",
+    "weights = np.ones(len(train_feature_num.columns))\n",
+    "\n",
     "bias = 0\n",
     "\n",
-    "learningRate = 0.01\n",
+    "learningRate = 0.001\n",
     "\n",
-    "Iterations = 1\n",
+    "Iterations = 10\n",
     "# 紀錄loss變化\n",
     "loss_record = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,52 +777,98 @@
     "    for numIter in range(Iterations):\n",
     "        # batch size為1, 每筆資料都更新參數\n",
     "        for i in range(len(data.index)):\n",
+    "            # 資料\n",
+    "            input = data.iloc[i]\n",
+    "            \n",
     "            global weights, bias\n",
     "            # 預測價格\n",
-    "            predict_price = np.dot(data.iloc[i], weights)\n",
+    "            predict_price = np.dot(input, weights)\n",
     "            # 處理inf\n",
-    "            print(predict_price)\n",
+    "            if np.isnan(predict_price):\n",
+    "                print('inf happened at ', i)\n",
+    "                break\n",
+    "#             print(predict_price)\n",
     "            \n",
     "            # 預測值與實際值間的誤差\n",
     "            loss = predict_price - labels[i]\n",
+    "#             print(loss)\n",
+    "\n",
+    "            # 在最後一筆資料時計算現在的 weight的 MSE\n",
     "            MSE = np.mean(loss**2)\n",
+    "#             RMSE = \n",
     "            \n",
     "            # 偏微分, 計算梯度\n",
-    "            gradient = np.dot(data.iloc[i].T, loss)\n",
+    "            gradient = np.dot(input.T, loss)\n",
+    "#             print(gradient)\n",
     "            \n",
     "            # 參數更新\n",
-    "            weights = weights - learningRate*gradient\n",
+    "            weights = weights - (1/len(data.index))*learningRate*gradient\n",
+    "#             weights = weights - learningRate*gradient\n",
+    "            # bias更新\n",
+    "        \n",
     "        \n",
     "        # 紀錄loss\n",
-    "        loss_record.append(MSE)\n",
+    "#         loss_record.append(MSE)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.5/site-packages/ipykernel_launcher.py:14: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[nan]"
+       "[21797471315.781166,\n",
+       " 21837654318.62414,\n",
+       " 21877579712.797028,\n",
+       " 21917248874.66609,\n",
+       " 21956663178.51665,\n",
+       " 21995823996.45153,\n",
+       " 22034732698.291794,\n",
+       " 22073390651.479946,\n",
+       " 22111799220.985477,\n",
+       " 22149959769.212692]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "train_lr(train_feature_num, train_label, Iterations)\n",
+    "loss_record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16870870254.0167,\n",
+       " 14721720401.203047,\n",
+       " 14410981272.466742,\n",
+       " 14465882990.790627,\n",
+       " 14583453764.575897,\n",
+       " 14697298801.516237,\n",
+       " 14794477087.197018,\n",
+       " 14874380155.016512,\n",
+       " 14939107869.5738,\n",
+       " 14991140644.015417]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove (1/len(data.index)), loss小一點\n",
     "train_lr(train_feature_num, train_label, Iterations)\n",
     "loss_record"
    ]
@@ -663,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
