Update MSE calculation

--- a/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
+++ b/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
@@ -508,19 +508,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 測試\n",
-    "train_feature_num = train_feature['LotArea'].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Wade\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\data.py:645: DataConversionWarning: Data with input dtype int64 were all converted to float64 by StandardScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "C:\\Users\\Wade\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:464: DataConversionWarning: Data with input dtype int64 were all converted to float64 by StandardScaler.\n",
+      "  return self.fit(X, **fit_params).transform(X)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -723,7 +723,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,19 +783,11 @@
     "            global weights, bias\n",
     "            # 預測價格\n",
     "            predict_price = np.dot(input, weights)\n",
-    "            # 處理inf\n",
-    "            if np.isnan(predict_price):\n",
-    "                print('inf happened at ', i)\n",
-    "                break\n",
     "#             print(predict_price)\n",
     "            \n",
     "            # 預測值與實際值間的誤差\n",
     "            loss = predict_price - labels[i]\n",
     "#             print(loss)\n",
-    "\n",
-    "            # 在最後一筆資料時計算現在的 weight的 MSE\n",
-    "            MSE = np.mean(loss**2)\n",
-    "#             RMSE = \n",
     "            \n",
     "            # 偏微分, 計算梯度\n",
     "            gradient = np.dot(input.T, loss)\n",
@@ -806,33 +798,43 @@
     "#             weights = weights - learningRate*gradient\n",
     "            # bias更新\n",
     "        \n",
-    "        \n",
+    "        # 在最後一筆資料時計算現在的 weight的 MSE\n",
+    "        all_predict = weights*data - labels\n",
+    "        # 同一 row做 sum\n",
+    "        all_loss =  all_predict.sum(axis=1)\n",
+    "        MSE = np.mean(all_loss**2)\n",
     "        # 紀錄loss\n",
-    "#         loss_record.append(MSE)\n",
-    "            "
+    "        loss_record.append(MSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[21797471315.781166,\n",
-       " 21837654318.62414,\n",
-       " 21877579712.797028,\n",
-       " 21917248874.66609,\n",
-       " 21956663178.51665,\n",
-       " 21995823996.45153,\n",
-       " 22034732698.291794,\n",
-       " 22073390651.479946,\n",
-       " 22111799220.985477,\n",
-       " 22149959769.212692]"
+       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
