Add bias to reduce cost

--- a/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
+++ b/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +782,7 @@
     "            \n",
     "            global weights, bias\n",
     "            # 預測價格\n",
-    "            predict_price = np.dot(input, weights)\n",
+    "            predict_price = np.dot(input, weights) + bias\n",
     "#             print(predict_price)\n",
     "            \n",
     "            # 預測值與實際值間的誤差\n",
@@ -797,11 +797,12 @@
     "            weights = weights - (1/len(data.index))*learningRate*gradient\n",
     "#             weights = weights - learningRate*gradient\n",
     "            # bias更新\n",
+    "            bias = bias - (1/len(data.index))*learningRate*loss\n",
     "        \n",
     "        # 在最後一筆資料時計算現在的 weight的 MSE\n",
-    "        all_predict = weights*data - labels\n",
+    "        all_predict = weights*data +bias\n",
     "        # 同一 row做 sum\n",
-    "        all_loss =  all_predict.sum(axis=1)\n",
+    "        all_loss =  all_predict.sum(axis=1) -labels\n",
     "        MSE = np.mean(all_loss**2)\n",
     "        # 紀錄loss\n",
     "        loss_record.append(MSE)"
@@ -809,32 +810,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
+       "[36714644075.54121,\n",
+       " 34474850707.64771,\n",
+       " 32318071372.20907,\n",
+       " 30244050237.397137,\n",
+       " 28252532235.613537,\n",
+       " 26343263059.388336,\n",
+       " 24515989157.3215,\n",
+       " 22770457730.068275,\n",
+       " 21106416726.367012,\n",
+       " 19523614839.10938]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
