prepare to submit hw02

--- a/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
+++ b/CS657 ML/Hw02 house price linear regrssion/Hw02.ipynb
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "先使用數值型態的feature"
+    "使用數值型態的feature"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization\n",
+    "### 04. Normalization\n",
     "資料的標準化用意在於解決overflow的問題, 因為feature眾多收斂的速度不見得相同。\n",
     "\n",
     "在艾姆斯房價資料集中房價變數（SalePrice）數量級約莫落於數萬美元至數十萬美元之間，而生活空間大小（GrLivArea）數量級約莫落於數千英畝左右，這可能使得在同一個學習速率下，兩個係數收斂的速度差異過大，而導致其中一個係數已經收斂，但另外一個數字仍很緩慢地向低點前進，雖然成本函數遞減的速率已經平緩，迭代後所得到的係數卻與內建函數的相差甚遠，特別是常數項。"
@@ -751,7 +751,7 @@
     "### Learning Rate的選擇\n",
     "> https://medium.freecodecamp.org/how-to-pick-the-best-learning-rate-for-your-machine-learning-project-9c28865039a8\n",
     "\n",
-    "在超參數的設置方面，經過多次實驗後發現當learning rate為1時會有較好的成效。"
+    "在超參數的設置方面，經過多次實驗後發現當learning rate為0.001時會有較好的成效。"
    ]
   },
   {
@@ -767,7 +767,7 @@
     "pocket_weights  = np.ones(len(train_feature_num.columns))\n",
     "pocket_bias = 0\n",
     "\n",
-    "learningRate = 1\n",
+    "learningRate = 0.001\n",
     "\n",
     "Iterations = 50\n",
     "# 紀錄loss變化\n",
@@ -803,10 +803,9 @@
     "            gradient = np.dot(input.T, loss)\n",
     "            \n",
     "            # 參數更新\n",
-    "            weights = weights - (1/len(data.index))*learningRate*gradient\n",
-    "#             weights = weights - learningRate*gradient\n",
+    "            weights = weights - learningRate*gradient\n",
     "            # bias更新\n",
-    "            bias = bias - (1/len(data.index))*learningRate*loss\n",
+    "            bias = bias - learningRate*loss\n",
     "        \n",
     "        # 在最後一筆資料時計算現在的 weight的 MSE\n",
     "        all_predict = weights*data +bias\n",
@@ -823,7 +822,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -892,42 +896,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[16870870254.0167,\n",
-       " 14721720401.203047,\n",
-       " 14410981272.466742,\n",
-       " 14465882990.790627,\n",
-       " 14583453764.575897,\n",
-       " 14697298801.516237,\n",
-       " 14794477087.197018,\n",
-       " 14874380155.016512,\n",
-       " 14939107869.5738,\n",
-       " 14991140644.015417]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove (1/len(data.index)), loss小一點\n",
-    "train_lr(train_feature_num, train_label, Iterations)\n",
-    "loss_record"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -971,65 +939,6 @@
     "test_feature_num = pd.DataFrame(test_feature_num, columns=test_column_names)\n",
     "\n",
     "y_pred = predict(test_feature_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id               0\n",
-       "MSSubClass       0\n",
-       "LotArea          0\n",
-       "OverallQual      0\n",
-       "OverallCond      0\n",
-       "YearBuilt        0\n",
-       "YearRemodAdd     0\n",
-       "BsmtFinSF1       1\n",
-       "BsmtFinSF2       1\n",
-       "BsmtUnfSF        1\n",
-       "TotalBsmtSF      1\n",
-       "1stFlrSF         0\n",
-       "2ndFlrSF         0\n",
-       "LowQualFinSF     0\n",
-       "GrLivArea        0\n",
-       "BsmtFullBath     2\n",
-       "BsmtHalfBath     2\n",
-       "FullBath         0\n",
-       "HalfBath         0\n",
-       "BedroomAbvGr     0\n",
-       "KitchenAbvGr     0\n",
-       "TotRmsAbvGrd     0\n",
-       "Fireplaces       0\n",
-       "GarageCars       1\n",
-       "GarageArea       1\n",
-       "WoodDeckSF       0\n",
-       "OpenPorchSF      0\n",
-       "EnclosedPorch    0\n",
-       "3SsnPorch        0\n",
-       "ScreenPorch      0\n",
-       "PoolArea         0\n",
-       "MiscVal          0\n",
-       "MoSold           0\n",
-       "YrSold           0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_feature_num.isnull().sum()"
    ]
   },
   {
@@ -1140,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
