update code document

--- a/CS657 ML/Hw03 MNIST decision tree/hw03-1041621.ipynb
+++ b/CS657 ML/Hw03 MNIST decision tree/hw03-1041621.ipynb
@@ -559,8 +559,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "train = pd.read_csv(\"../input/train.csv\")\n",
-    "test = pd.read_csv(\"../input/test.csv\")\n",
+    "train = pd.read_csv(\"train.csv\")\n",
+    "test = pd.read_csv(\"test.csv\")\n",
     "train.head()"
    ]
   },
@@ -1804,7 +1804,7 @@
    ],
    "source": [
     "# 暫時只用前十筆資料\n",
-    "X_train = X_train.head(10)\n",
+    "X_train = X_train.head(300)\n",
     "X_train.head()"
    ]
   },
@@ -1903,10 +1903,6 @@
    "source": [
     "class Question:\n",
     "    \"\"\"A Question is used to partition a dataset.\n",
-    "    This class just records a 'column number' (e.g., 0 for Color) and a\n",
-    "    'column value' (e.g., Green). The 'match' method is used to compare\n",
-    "    the feature value in an example to the feature value stored in the\n",
-    "    question. See the demo below.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, column, value):\n",
@@ -1915,14 +1911,12 @@
     "        self.value = value\n",
     "\n",
     "    def match(self, example):\n",
-    "        # Compare the feature value in an example to the feature value in this question.\n",
     "        # example是由partition()帶進來的某筆資料\n",
     "        val = example.iloc[self.column]\n",
     "        return val >= self.value\n",
     "\n",
     "    def __repr__(self):\n",
-    "        # This is just a helper method to print\n",
-    "        # the question in a readable format.\n",
+    "        # This is just a helper method to print the question in a readable format.\n",
     "        condition = \"==\"\n",
     "        if is_numeric(self.value):\n",
     "            condition = \">=\"\n",
@@ -1999,7 +1993,6 @@
     "            # Calculate the information gain from this split\n",
     "            gain = info_gain(true_rows, false_rows, current_uncertainty)\n",
     "\n",
-    "            # You actually can use '>' instead of '>='\n",
     "            if gain >= best_gain:\n",
     "                best_gain, best_question = gain, question\n",
     "\n",
@@ -2013,10 +2006,6 @@
    "outputs": [],
    "source": [
     "class Leaf:\n",
-    "    \"\"\"A Leaf node classifies data.\n",
-    "    This holds a dictionary of class (e.g., \"Apple\") -> number of times\n",
-    "    it appears in the rows from the training data that reach this leaf.\n",
-    "    \"\"\"\n",
     "\n",
     "    def __init__(self, rows):\n",
     "        self.predictions = class_counts(rows)"
@@ -2058,15 +2047,12 @@
     "def build_tree(rows, tree_height_limit):\n",
     "    # 計算tree的height\n",
     "    global tree_height\n",
-    "#     print(tree_height)\n",
     "    tree_height = tree_height +1\n",
     "    \n",
     "    if tree_height > tree_height_limit:\n",
     "        return Leaf(rows)\n",
     "    \n",
-    "    # Try partitioing the dataset on each of the unique attribute,\n",
-    "    # calculate the information gain,\n",
-    "    # and return the question that produces the highest gain.\n",
+    "    # 找最好切割的問題與計算gain\n",
     "    gain, question = find_best_split(rows)\n",
     "\n",
     "    # 如果info gain為0，表示沒有問題可以問了\n",
@@ -2082,10 +2068,6 @@
     "    # Recursively build the false branch.\n",
     "    false_branch = build_tree(false_rows, tree_height_limit)\n",
     "\n",
-    "    # Return a Question node.\n",
-    "    # This records the best feature / value to ask at this point,\n",
-    "    # as well as the branches to follow\n",
-    "    # dependingo on the answer.\n",
     "    return Decision_Node(question, true_branch, false_branch)"
    ]
   },
@@ -2124,15 +2106,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 48.2 s, sys: 208 ms, total: 48.4 s\n",
-      "Wall time: 48.4 s\n"
+      "CPU times: user 3h 39min 48s, sys: 12.2 s, total: 3h 40min 1s\n",
+      "Wall time: 3h 39min 58s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "tree_height = 1\n",
+    "# 設定初始高度\n",
+    "tree_height = 0\n",
     "my_tree = build_tree(X_train, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 這裡只用10000筆資料訓練就花了快4小時，達到的準確度也只有0.46"
    ]
   },
   {
@@ -2169,9 +2159,6 @@
     "    if isinstance(node, Leaf):\n",
     "        return node.predictions\n",
     "\n",
-    "    # Decide whether to follow the true-branch or the false-branch.\n",
-    "    # Compare the feature / value stored in the node,\n",
-    "    # to the example we're considering.\n",
     "    if node.question.match(row):\n",
     "        return classify(row, node.true_branch)\n",
     "    else:\n",
@@ -2209,13 +2196,13 @@
     "import operator\n",
     "label_predict = []\n",
     "for row in test.index:\n",
+    "    # 列印預測的類別與機率\n",
     "#     print (\"Predicted: %s\" % (print_leaf(classify(test.iloc[row], my_tree))))\n",
     "    prediction = classify(test.iloc[row], my_tree)\n",
     "    # 將value轉成int\n",
     "    for key in prediction:\n",
     "        prediction[key] = int(prediction[key])\n",
     "    # 取value最大的key\n",
-    "#     print(max(prediction.items(), key=operator.itemgetter(1))[0])\n",
     "    label_predict.append(max(prediction.items(), key=operator.itemgetter(1))[0])\n",
     "\n",
     "# 確保int內沒有 .0\n",
@@ -2232,11 +2219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = pd.read_csv(\"../input/sample_submission.csv\")\n",
+    "sub = pd.read_csv(\"sample_submission.csv\")\n",
     "sub['Label'] = label_predict\n",
     "sub.to_csv('CART_model_sub.csv',index=False)"
    ]
@@ -2246,12 +2233,21 @@
    "metadata": {},
    "source": [
     "由於決策樹在這種資料量來到上萬筆，feture又超過100個情況下，訓練需花費大量的時間，不然準確度並不高\n",
-    "(目前tree_height=5, 訓練資料使用1萬筆，在i9平台下就花了8小時訓練，且準確度甚至未達50趴)\n",
-    "因此下方連結內使用了soft decision tree\n",
-    "> 未定\n",
     "\n",
-    "可以達到90趴的準確度，在2080Ti上訓練也僅花了20分鐘"
+    "(目前tree_height=5, 訓練資料使用1萬筆，在i9平台下就花了4小時訓練，且準確度甚至未達50趴)\n",
+    "\n",
+    "因此下方使用了soft decision tree\n",
+    "> tf_soft_decision_tree.py\n",
+    "\n",
+    "可以達到90趴的準確度，在2080Ti上訓練也僅花了40分鐘"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2270,9 +2266,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
